# docscribe

./: .env.docker  .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  docker-compose.yml  transcribe.py
backend/: Dockerfile  alembic.ini  entrypoint-worker.sh  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 01ea7b0661ea_initial_tables.py  05a1b2c3d4e6_add_doctor_report_templates.py  cbad0d08ba69_add_token_fields_to_notes.py  d1a2b3c4d5e6_add_sequence_number_to_sessions.py
backend/app/: celery_app.py  config.py  main.py
backend/app/api/: admin.py  auth.py  deps.py  letterhead.py  patients.py  report_template.py  sessions.py
backend/app/models/: __init__.py  doctor.py  invoice.py  letterhead.py  note.py  patient.py  report_template.py  session.py
backend/app/schemas/: admin.py  auth.py  letterhead.py  note.py  patient.py  report_template.py  session.py
backend/app/services/: auth.py  openrouter.py  pdf.py  processing.py  storage.py
backend/app/templates/: note_pdf.html
backend/tests/: test_admin.py  test_auth.py  test_health.py  test_letterhead.py  test_notes.py  test_patients.py  test_processing.py  test_sessions.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: index.css  router.jsx
frontend/src/api/: client.js  endpoints.js
frontend/src/components/: PatientSearch.jsx  ProtectedRoute.jsx
frontend/src/pages/: Dashboard.jsx  LetterheadSettings.jsx  LoginPage.jsx  NewSession.jsx  NoteEditor.jsx  (+4 more)
specs/: mvp-full-stack.md
(+8 files in other folders)
